# seo_automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.json  run_local.bat
apps/api/: Dockerfile  pyproject.toml
apps/api/src/tr_seo_api/: config.py  dependencies.py  main.py
apps/api/src/tr_seo_api/routes/: module0.py
apps/portal/: Dockerfile  index.html  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo
apps/portal/src/: App.tsx  index.css
apps/portal/src/lib/: api.ts  mockModule0.ts
apps/portal/src/types/: module0.ts
docs/architecture/: module-0-foundation.md
docs/modules/: module-0-fallback-sample-output.json  module-0-input-output.md
infra/docker/: README.md
scripts/: run_local.py
services/module0-discovery/: pyproject.toml
services/module0-discovery/src/tr_seo_module0/: __init__.py  ai_sov.py  business_context.py  cdd_parser.py  competitor_intelligence.py  entity_authority.py  exporter.py  fanout_mapper.py  intent_classifier.py  keyword_clusterer.py  keyword_engine.py  manual_keyword_upload.py  openai_keyword_fallback.py  openai_site_inference.py  platform_detector.py  robots_inspector.py  semrush_client.py  service.py  site_inspector.py  sitemap_service.py  url_inventory.py  url_mapper.py  website_crawler.py
tests/unit/: test_ai_sov.py  test_cdd_parser.py  test_module0_exporter.py  test_module0_service.py  test_platform_detector.py  test_semrush_client.py  test_site_inspector.py  test_url_mapper.py
