[project]
name = "tr-seo-api"
version = "0.1.0"
description = "FastAPI backend for Traffic Radius SEO Automation System."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic-settings>=2.4,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "redis>=5.0,<6.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "uvicorn[standard]>=0.30,<1.0",
    "tr-seo-contracts",
    "tr-seo-db",
    "tr-seo-module0",
]

[tool.uv.sources]
tr-seo-contracts = { workspace = true }
tr-seo-db = { workspace = true }
tr-seo-module0 = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tr_seo_api"]
