[project]
name = "tr-seo-module0"
version = "0.1.0"
description = "Module 0 discovery and keyword mapping services."
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12,<5.0",
    "httpx>=0.27,<1.0",
    "openpyxl>=3.1,<4.0",
    "pydantic>=2.8,<3.0",
    "pypdf>=5.0,<6.0",
    "python-docx>=1.1,<2.0",
    "requests>=2.32,<3.0",
    "tr-seo-contracts",
]

[tool.uv.sources]
tr-seo-contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tr_seo_module0"]
